--- a/data/hyps/hyp.scratch.fishleg.yaml
+++ b/data/hyps/hyp.scratch.fishleg.yaml
@@ -1,12 +1,13 @@
-# YOLOv5 🚀 by Ultralytics, GPL-3.0 license
-# Hyperparameters for high-augmentation COCO training from scratch
-# python train.py --batch 32 --cfg yolov5m6.yaml --weights '' --data coco.yaml --img 1280 --epochs 300
-# See tutorials for hyperparameter evolution https://github.com/ultralytics/yolov5#tutorials
-
-lr0: 0.001  # initial learning rate (SGD=1E-2, Adam=1E-3)
+lr0: 0.005  # initial learning rate (SGD=1E-2, Adam=1E-3)
 lrf: 0.01  # final OneCycleLR learning rate (lr0 * lrf)
-momentum: 0.937  # SGD momentum/Adam beta1
-weight_decay: 0.0005  # optimizer weight decay 5e-4
+momentum: 0.9  # SGD momentum/Adam beta1
+weight_decay: 0 # optimizer weight decay 5e-4
+aux_lr: 1e-4
+aux_eps: 1e-8
+update_aux_every: 10
+initialization: "normal"
+normalization: True
+likelihood: "FISH_LIKELIHOODS["bernoulli"](device=device)"
 warmup_epochs: 3.0  # warmup epochs (fractions ok)
 warmup_momentum: 0.8  # warmup initial momentum
 warmup_bias_lr: 0.1  # warmup initial bias lr
