--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,7 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,jupyternotebooks,macos,linux
+
+*.jpg
+runs/train/test_model*
+settings.json
