--- a/data/hyp.scratch.fishleg.yaml
+++ b/data/hyp.scratch.fishleg.yaml
@@ -2,8 +2,8 @@ lr0: 0.01  # initial learning rate (SGD=1E-2, Adam=1E-3)
 lrf: 0.01  # final OneCycleLR learning rate (lr0 * lrf)
 momentum: 0.9  # SGD momentum/Adam beta1
 weight_decay: 0 # optimizer weight decay 5e-4
-aux_lr: 1e-4
-aux_eps: 1e-8
+aux_lr: 1.0e-4
+aux_eps: 1.0e-8
 update_aux_every: 10
 initialization: "normal"
 normalization: True
@@ -36,8 +36,9 @@ mixup: 0.1  # image mixup (probability)
 copy_paste: 0.2  # segment copy-paste (probability)
 scale_factor: 1
 damping: 0.1
-aux_betas: (0.9, 0.999)
+aux_betas: [0.9, 0.999]
 method: "antithetic"
-method_kwargs: {"eps": 1e-4}
-precondition_aux: True,
+method_kwargs: {"eps": 1.0e-4}
+precondition_aux: True
 aux_log: True
+writer: False
